@@ -77,18 +77,19 @@ class Fallback
      * @var array
      */
     public $configFallback = array(
-        'runtime' => array(
+        'output' => array(
             'disabled' => 'false',
             'iprange' => '*',
-            'detectAjax' => 'true',
-            'level' => '10',
-            'maxCall' => '20',
-        ),
-        'output' => array(
             'skin' => 'smokygrey',
             'destination' => 'frontend',
             'maxfiles' => '10',
-
+        ),
+        'runtime' => array(
+            'detectAjax' => 'true',
+            'level' => '10',
+            'maxCall' => '20',
+            'maxRuntime' => '60',
+            'memoryLeft' => '64',
         ),
         'properties' => array(
             'analyseProtected' => 'false',
@@ -183,6 +184,14 @@ class Fallback
         ),
         'analyseGetter' => array(
             'type' => 'Select',
+            'editable' => 'true',
+        ),
+        'memoryLeft' => array(
+            'type' => 'Input',
+            'editable' => 'true',
+        ),
+        'maxRuntime' => array(
+            'type' => 'Input',
             'editable' => 'true',
         ),
     );
